<resources>
    <string name="app_name">UrbanGame</string>
    <string name="title_activity_game">Play</string>
    <string name="title_activity_track_choice">TrackChoiceActivity</string>

    <!--Main Activity-->
    <string name="b_play">Play</string>
    <string name="b_add_track">Create</string>
    <string name="b_info">Info</string>

        <!--Popup info-->
        <string name="tv_first">This is Urban Game. Urban game is type of game based on your movement and location. This
            game allows you to play and create urban games. Every game or track consists of several riddles in particular order.
            Each riddle contains a hint about the place to find. The track may be based on most beautiful places of your city,
            best restaurants or places with historical values.
        </string>
        <string name="tv_second">Play game - in this mode you can choose one of tracks and try to play it. At the beginning
            you get first riddle which should direct you to the first location. When you get to the right location with your
            device you get another riddle to solve. Once you solve the last one, you win.
        </string>
        <string name="tv_third">Create a track - in this mode you create your own track by adding markers on map with hint leading
            to this particular place. After adding all places you want, you fill short track summary form (title, description, location)
            to help users find your track.
        </string>


    <!--Track Choice Activity-->
    <string name="tv_tca_choose_track_title">Choose the track!</string>
    <string name="hint_tca_search">Search</string>
        <!--Popup track details-->
        <string name="b_ptd_cancel">Cancel</string>
        <string name="b_ptd_rate">Rate</string>
        <string name="b_ptd_play">Play</string>

    <!--Popup rate track-->
    <string name="prt_title">Rate the track!</string>
    <string name="prt_quality">Quality</string>
    <string name="prt_difficulty">Difficulty</string>
    <string name="prt_Length">Length</string>

    <!--Game Activity-->
    <string name="tv_ga_riddle">Riddle %1$d / %2$d</string>
        <!--Popup success-->
        <string name="tv_ps_congratulations">Congratulations!</string>
        <string name="tv_ps_congratulations_text">You have found the right location</string>
        <string name="b_ps_ok">OK</string>
        <string name="tv_ga_final_congrats_text">YOU WON THE GAME!!!</string>

        <!--Popup info-->
        <string name="tv_ga_pi_first">Current riddle is displayed at the top. You have to find the place
        described by the riddle. You can leave app by pressing the home button and it will still work in background,
        sending you the notification if you are in the right place.</string>

        <!--Popup continue-->
        <string name="tv_ga_pc_continue_game">Do you want to continue last game?</string>
        <string name="b_ga_pc_start_new">Start New</string>
        <string name="b_ga_pc_continue">Continue</string>

    <!--Maps Activity-->
    <string name="tv_ma_new_marker">New Marker</string>
    <string name="tv_ma_edit_marker">Edit Marker</string>
    <string name="tv_ma_which_marker">%1$d / %2$d</string>
    <string name="b_ma_save">SAVE</string>
        <!--Popup add edit track-->
        <string name="hint_et_pae_riddle_text">Text of the riddle</string>
        <string name="b_pae_popup_remove">REMOVE</string>
        <string name="b_pae_popup_ok">OK</string>

        <!--Popup info-->
        <string name="tv_pi_first">Click once to add new marker. Then pass riddle text and save the
            marker by clicking "OK" or remove it. You can edit existing markers by clicking on them and
            move them by long clicking and dragging them.</string>
        <string name="tv_pi_second">Click twice to zoom in a bit. Use two fingers to rotate or zoom map.
        After rotating map compass icon appears in the top left corner. It shows you the North and allows you
        to undo all rotations.</string>
        <string name="tv_pi_third">Use first button on right to center map to your current position.
            Second button allows you to change type of the map. Last one is (as you already know) this info window. When you finish
        creating your track click "SAVE" to move to track summary.</string>

    <!--Track Summary Activity-->
    <string name="tv_tsa_title">Track summary</string>
    <string name="et_tsa_hint_title">Title</string>
    <string name="et_tsa_hint_description">Description</string>
    <string name="et_tsa_hint_location">Location</string>
    <string name="et_tsa_hint_author">Author</string>
    <string name="b_tsa_save">SAVE</string>

    <!--Notifications-->
    <string name="notification_title">Congratulations!</string>
    <string name="notification_text">You have found the right place</string>
    <string name="notification_channel_name">NotificationsChannel</string>
    <string name="notification_channel_description">Notify when user found right place</string>

    
    <!--Warnings toasts-->
    <string name="toast_empty_track">Track cannot be empty!</string>
    <string name="toast_something_wrong">Something went wrong!</string>
    <string name="title_activity_maps">Create</string>
    <string name="toast_track_saved">Track saved!</string>
    <string name="toast_empty_title">Title field is empty!</string>

</resources>
