<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackSummaryActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp"
        android:text="@string/tv_tsa_title"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/et_track_title"
        android:inputType="text"
        android:hint="@string/et_tsa_hint_title"
        android:textColorHint="@color/colorTransparentAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/et_track_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/et_track_description"
        android:inputType="textMultiLine"
        android:hint="@string/et_tsa_hint_description"
        android:textColorHint="@color/colorTransparentAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:scrollbars="vertical"
        android:minHeight="240dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/et_track_location"
        android:inputType="text"
        android:hint="@string/et_tsa_hint_location"
        android:textColorHint="@color/colorTransparentAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_track_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"/>
    
    <Button
        android:id="@+id/b_save_track"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/b_tsa_save"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"/>
</android.support.constraint.ConstraintLayout>