<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="250dp"/>

    <Button
        android:id="@+id/b_play"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/b_play"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/videoView"
        android:layout_marginTop="50dp"
        android:background="@color/colorTransparentPrimaryDark"
        />

    <Button
        android:id="@+id/b_create"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/b_add_track"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_play"
        android:layout_marginTop="25dp"
        android:background="@color/colorTransparentPrimaryDark"
        />

    <Button
        android:id="@+id/b_info"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/b_info"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_create"
        android:layout_marginTop="25dp"
        android:background="@color/colorTransparentPrimaryDark"
        />
</android.support.constraint.ConstraintLayout>