<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    tools:context=".GameActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="30dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="30dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_continue_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:padding="25dp"
                    android:text="@string/tv_ga_pc_continue_game"
                    android:textColor="@color/colorAccent"
                    android:textSize="28sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_fake_center"
                    android:layout_width="2dp"
                    android:layout_height="0dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_continue_game"
                    android:layout_marginTop="25dp"/>

                <Button
                    android:id="@+id/b_start_new"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@color/colorAccent"
                    android:textSize="16sp"
                    android:text="@string/b_ga_pc_start_new"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/tv_fake_center"
                    app:layout_constraintTop_toBottomOf="@id/tv_continue_game"
                    android:layout_marginTop="25dp"/>

                <Button
                    android:id="@+id/b_continue"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/b_ga_pc_continue"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_fake_center"
                    app:layout_constraintTop_toBottomOf="@id/tv_continue_game"
                    android:layout_marginTop="25dp"/>


            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>





</RelativeLayout>