<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="30dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="30dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_rate_track_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="28sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_track_rate_quality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/prt_quality"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_rate_track_title"/>

                <RatingBar
                    android:id="@+id/ratb_quality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_track_rate_quality"
                    android:theme="@style/RatingBar"/>

                <TextView
                    android:id="@+id/tv_track_rate_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/prt_difficulty"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ratb_quality"/>

                <RatingBar
                    android:id="@+id/ratb_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_track_rate_difficulty"
                    android:theme="@style/RatingBar"/>

                <TextView
                    android:id="@+id/tv_track_rate_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/prt_Length"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ratb_difficulty"/>

                <RatingBar
                    android:id="@+id/ratb_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_track_rate_length"
                    android:theme="@style/RatingBar"/>

                <TextView
                    android:id="@+id/tv_fake_center"
                    android:layout_width="2dp"
                    android:layout_height="0dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ratb_length"
                    android:layout_marginTop="25dp"/>

                <Button
                    android:id="@+id/b_cancel_rating"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/b_ptd_cancel"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/tv_fake_center"
                    app:layout_constraintTop_toBottomOf="@id/ratb_length"
                    android:layout_marginTop="25dp"/>

                <Button
                    android:id="@+id/b_save_rating"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/b_ptd_rate"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_fake_center"
                    app:layout_constraintTop_toBottomOf="@id/ratb_length"
                    android:layout_marginTop="25dp"/>


            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>





</RelativeLayout>