<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    tools:context=".MapsActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/colorTransparentAccent"
        app:cardCornerRadius="30dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:cardBackgroundColor="@color/colorHardlyTransparentPrimaryDark"
            app:cardCornerRadius="30dp">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="25dp">
                <ImageView
                    android:id="@+id/ic_ma_close_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clear_black_24dp"
                    android:tint="@color/colorAccent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="15dp"/>

                <TextView
                    android:id="@+id/tv_info_map_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/tv_pi_first"/>

                <TextView
                    android:id="@+id/tv_info_map_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_info_map_first"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/tv_pi_second"
                    />

                <TextView
                    android:id="@+id/tv_info_map_third"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_info_map_second"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/tv_pi_third"
                    />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>
</RelativeLayout>